...
        <TextView
            android:layout_width="300dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/location_reminder" />
        <TextView
            android:id="@+id/setPOIForTesting"
            android:layout_width="20dp"
            android:layout_height="21dp"
            android:textSize="10sp"
            android:layout_marginBottom="84dp"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/save_locatio_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:onClick="@{()-> sharedViewModel.selectLocation(viewParameter)}"
        android:text="@string/save"
        android:theme="@style/customTheme"
        android:background="@color/colorPrimaryDark"
...
